--- a/Detecção_de_Fraude_em_Cartões_de_Crédito.ipynb
+++ b/Detecção_de_Fraude_em_Cartões_de_Crédito.ipynb
@@ -637,7 +637,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Vaiaveis\n",
+        "#Variáveis\n",
         "As variaveis [v1, v2, v3...,v28] foram submetidas por um processo chamado PCA (Principal Component Analysis), uma técnica usada para reduzir dimensionalidades do conjunto de dados\n",
         "a Variavel time mostra o número  de segundos decorridos entre esta transação e a primeira transação no conjunto de dados\n"
       ],
